added condition to check if provided group name is valid