@@ -1,5 +1,6 @@
 package com.example.expenseapi.service;
 
+import com.example.expenseapi.pojo.BaseGroup;
 import com.example.expenseapi.pojo.Group;
 import com.example.expenseapi.pojo.Membership;
 import com.example.expenseapi.pojo.User;
@@ -8,10 +9,9 @@ import com.example.expenseapi.repository.RoleRepository;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @Service
 public class GroupServiceImpl extends GenericServiceImpl<Group, Long> implements GroupService {
@@ -27,15 +27,19 @@ public class GroupServiceImpl extends GenericServiceImpl<Group, Long> implements
     }
 
     @Override
-    public List<Group> getAll() {
+    public List<BaseGroup> getBaseGroups() {
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
-        Optional<User> user = userService.findByEmail(email);
-        return user.map(value ->
-                membershipService.getBaseGroupsByUserId(value.getId()).stream()
-                        .filter(baseGroup -> baseGroup instanceof Group)
-                        .map(baseGroup -> (Group) baseGroup)
-                        .collect(Collectors.toList())
-        ).orElse(Collections.emptyList());
+        return membershipService.getBaseGroupsByUserId(userService.findByEmail(email).get().getId());
+    }
+
+    @Override
+    public List<Group> getActiveGroups() {
+        return getBaseGroups()
+                .stream()
+                .filter(baseGroup -> baseGroup instanceof Group)
+                .map(baseGroup -> (Group) baseGroup)
+                .toList();
+
     }
 
     @Override
